--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install the dependencies required
       run: npm install
     - name: Check linting 
-      run: npm lint
+      run: npm run lint
     - name: Run the tests
       run: npm test
     - name: Build the app
