--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # We need this so we don't try to import stuff from package.json just 
 # to read the app version while checking for the update
-APP_VERSION=$npm_package_version
+REACT_APP_VERSION=$npm_package_version
