Fix dark theme bug, only check for updates if running prod env

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # We need this so we don't try to import stuff from package.json just 
 # to read the app version while checking for the update
 REACT_APP_VERSION=$npm_package_version
+REACT_APP_ENV="prod"
