--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-speech-recognition": "^3.9.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.16.0",
