--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "typescript": "^4.8.4",
     "web-vitals": "^3.0.3"
   },
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-speech-recognition": "^3.9.0",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.25.0",
